--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="validation_product_count">Product count must be a number and may not be negative.</string>
     <string name="intent_extra_employee">intent_extra_employee</string>
     <string name="intent_extra_product">intent_extra_product</string>
-    <string name="title_activity_create_employee">CreateEmployeeActivity</string>
+    <string name="title_activity_create_employee">Create Employee</string>
     <string name="title_activity_main">Main Menu</string>
     <string name="title_shopping_cart">Shopping Cart</string>
 </resources>
