--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="title_activity_create_employee">Create Employee</string>
     <string name="title_activity_main">Main Menu</string>
     <string name="title_shopping_cart">Shopping Cart</string>
+    <string name="edit_text_search">Search</string>
 </resources>
